<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"

    >

    <TableRow>

        <TextView android:text="@string/ingresar_id_conductor"
            android:textAlignment="center"
            android:textSize="24sp"
            />
        <EditText

            android:id="@+id/editIdConductor"
            android:inputType="number"
            android:maxLength="7"
            android:layout_width="match_parent"
            android:autofillHints=""
            android:minHeight="48dp"
            android:textAlignment="center"
           />

    </TableRow>

    <TableRow>

        <TextView android:text="@string/ingresar_nombre_conductor" />

        <EditText

            android:id="@+id/editNombreConductor"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/ingresar_direccion_conductor" />

        <EditText

            android:id="@+id/editDireccionConductor"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/ingresar_telefono_conductor" />

        <EditText

            android:id="@+id/editTelefonoConductor"
            android:inputType="text"
            android:maxLength="8" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/ingresar_cantidad_vehiculos_conductor" />

        <EditText

            android:id="@+id/editCantVeh"
            android:inputType="number"
            android:maxLength="30" />
    </TableRow>

    <TableRow>

        <Button
            android:onClick="insertarConductor"
            android:text="@string/insertar_Condutor" />

    </TableRow>
</TableLayout>


